# otto10

./: .gitignore  CMakeLists.txt  LICENSE  README.md  otto10.conf
scripts/: dbgen.sh
src/: audio.c  audio_selection.c  db.c  defs.c  defs.h  main.c
